add mobile code

--- a/PROJECT.html
+++ b/PROJECT.html
@@ -11,7 +11,7 @@
             <div class="row">
                 
 
-                    <div class="col-md-8">
+                    <div class="col-md-8 col-sm-12">
                     <div class="mb-3">
                         <label for="scrapRateInput1" class="form-label">Scrap Rate</label>
                         <input onkeyup="onChangeScrap()" type="text" class="form-control" id="scrapRateInput1" placeholder="Scrap Rate">
@@ -19,7 +19,7 @@
               </div>
             </div>
             <div class="row">
-                <div class="col-md-8">
+                <div class="col-md-8 col-sm-12">
                     <div class="mb-3">
                         <label for="screwRate" class="form-label">Screw Rate</label>
                         <input onkeyup="onChangeScrap()" type="text" class="form-control" id="screwRate" placeholder="Screw Rate">
@@ -27,7 +27,7 @@
                 </div>
               </div>
               <div class="row">
-                <div class="col-md-8">
+                <div class="col-md-8 col-sm-12">
                     <div class="mb-3 text-center">
                         <label for="screwType" class="form-label">Screw Type</label>
                         <select id="screwType" class="form-select" aria-label="Default select example">
@@ -38,7 +38,7 @@
                   </div>
               </div>
               <div class="row">
-                  <div class="col-md-8">
+                  <div class="col-md-8 col-sm-6">
                       <div class="mb-3 text-center">
       
                           <button onclick="calculateData()" rows="3" type="submit" class="btn btn-outline-info mb-3 " id="submtBtn" disabled>Submit</button>
